--- a/spotifyAdvancedHTML.html
+++ b/spotifyAdvancedHTML.html
@@ -2,11 +2,64 @@
 
 
 <head>
-    <link rel="StyleSheet" href="SpotifyStyle.css" type="text/css" />
-</head>
-<body>
 
-    <div class="header"></div>
-    <div style="height: 1000px;"></div>
+    <link rel="StyleSheet" href="./spotifyAdvancedCSShtml.css" type="text/css" />
+    <link rel="preload" href="https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Book.3466e0ec.woff2" as="font"
+        type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Bold.8d0a45cc.woff2" as="font"
+        type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Light.afd9ab26.woff2" as="font"
+        type="font/woff2" crossorigin="anonymous">
+
+</head>
+
+<body>
+    <div class="main-container">
+        <div class="unused"></div>
+
+        <div class="artistName">
+            The Cranberries
+        </div>
+
+        <div class="albumInfoContainer">
+            <div class="albumPicture">
+                <img class="images" src="./images/ab67616d00001e022e9ec3f67bdfe70e71de4b06.jpg">
+            </div>
+            <div class="albumInfo">
+                <a href="/album/3YsIgJc0Df1D3VV2MXRgxq">Remembering Dolores</a>
+                <div>
+                    <span>Álbum</span>
+                    <span>· 2021 ·</span>
+                    <span>15 canciones</span>
+                </div>
+                <div class="albumButtons">
+                    <button type="input">
+                        <svg role="img" height="16" width="16" viewBox="0 0 16 16" class="Svg-sc-1bi12j5-0 jgfuCe">
+                            <path
+                                d="M3 1.713a.7.7 0 011.05-.607l10.89 6.288a.7.7 0 010 1.212L4.05 14.894A.7.7 0 013 14.288V1.713z">
+                            </path>
+                        </svg>
+                    </button>
+                    <div class="albumButtons">
+                        <svg role="img" height="24" width="24" viewBox="0 0 24 24" class="Svg-sc-1bi12j5-0 jgfuCe">
+                            <path
+                                d="M5.21 1.57a6.757 6.757 0 016.708 1.545.124.124 0 00.165 0 6.741 6.741 0 015.715-1.78l.004.001a6.802 6.802 0 015.571 5.376v.003a6.689 6.689 0 01-1.49 5.655l-7.954 9.48a2.518 2.518 0 01-3.857 0L2.12 12.37A6.683 6.683 0 01.627 6.714 6.757 6.757 0 015.21 1.57zm3.12 1.803a4.757 4.757 0 00-5.74 3.725l-.001.002a4.684 4.684 0 001.049 3.969l.009.01 7.958 9.485a.518.518 0 00.79 0l7.968-9.495a4.688 4.688 0 001.049-3.965 4.803 4.803 0 00-3.931-3.794 4.74 4.74 0 00-4.023 1.256l-.008.008a2.123 2.123 0 01-2.9 0l-.007-.007a4.757 4.757 0 00-2.214-1.194z">
+                            </path>
+                        </svg>
+                    </div>
+                    <div class="albumButtons">
+                        <svg role="img" height="24" width="24" viewBox="0 0 24 24" class="Svg-sc-1bi12j5-0 jgfuCe">
+                            <path
+                                d="M4.5 13.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3zm15 0a1.5 1.5 0 100-3 1.5 1.5 0 000 3zm-7.5 0a1.5 1.5 0 100-3 1.5 1.5 0 000 3z">
+                            </path>
+                        </svg>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
 </body>
+
+<a draggable="false" href="/album/3YsIgJc0Df1D3VV2MXRgxq">Remembering Dolores</a>
