css for header and title of artists

--- a/spotifyAdvancedHTML.html
+++ b/spotifyAdvancedHTML.html
@@ -4,6 +4,7 @@
 <head>
 
     <link rel="StyleSheet" href="./spotifyAdvancedCSShtml.css" type="text/css" />
+    <link rel="StyleSheet" href="./spotifyAdvancedCSS-Headerhtml.css" type="text/css" />
     <link rel="preload" href="https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Book.3466e0ec.woff2" as="font"
         type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Bold.8d0a45cc.woff2" as="font"
@@ -16,8 +17,21 @@
 <body>
     <div class="mainContainer">
         <div class="navigation"></div>
-        <div class="header"></div>
-        <div class="artistName"></div>
+        <div class="header">
+            <button type="submit">
+                <svg role="img" height="24" width="24" viewBox="0 0 24 24">
+                    <path
+                        d="M15.957 2.793a1 1 0 010 1.414L8.164 12l7.793 7.793a1 1 0 11-1.414 1.414L5.336 12l9.207-9.207a1 1 0 011.414 0z">
+                    </path>
+                </svg>
+            </button>
+        </div>
+        <div class="artistName">
+            <a href="https://open.spotify.com/artist/7t0rwkOPGlDPEhaOcVtOt9">
+                The Cranberries
+            </a>
+            
+        </div>
         <div class="albumInfo"></div>
         <div class="discography">
             <p>Lorem Ipsum
