--- a/spotifyAdvancedHTML.html
+++ b/spotifyAdvancedHTML.html
@@ -17,10 +17,19 @@
 
 <body>
     <div class="mainContainer">
-        <div class="navigation"></div>
+        <div class="navigation">
+            <div>
+                <img src="./images/falsenav.png"></img>
+            </div>
+        </div>
         <div class="header">
             <button type="submit">
-                <svg role="img" height="24" width="24" class="Svg-sc-1bi12j5-0 jgfuCe IYDlXmBmmUKHveMzIPCF" viewBox="0 0 24 24"><path d="M15.957 2.793a1 1 0 010 1.414L8.164 12l7.793 7.793a1 1 0 11-1.414 1.414L5.336 12l9.207-9.207a1 1 0 011.414 0z"></path></svg>
+                <svg role="img" height="24" width="24" class="Svg-sc-1bi12j5-0 jgfuCe IYDlXmBmmUKHveMzIPCF"
+                    viewBox="0 0 24 24">
+                    <path
+                        d="M15.957 2.793a1 1 0 010 1.414L8.164 12l7.793 7.793a1 1 0 11-1.414 1.414L5.336 12l9.207-9.207a1 1 0 011.414 0z">
+                    </path>
+                </svg>
             </button>
 
         </div>
@@ -30,18 +39,49 @@
             </a>
 
         </div>
-        <div class="albumInfo">
+        <div class="albums">
             <div class="albumPic">
                 <img src="./images/30.jpg">
-        </div>
-        <div>
-            
-        </div>
-    </div>
-    <div class="discography">
+            </div>
+            <div class="albumInfoContainer">
+                <div class='albumName'>30</div>
+                <div class="albumInfo"">
+                <span>Álbum</span>
+                <span>• 2021 •</span>
+                <span>12 canciones</span>
+            </div>
+            <div class=" buttons">
+                    <button type="submit">
+                        <svg role="img" height="16" width="16" viewBox="0 0 16 16" class="Svg-sc-1bi12j5-0 jgfuCe">
+                            <path
+                                d="M3 1.713a.7.7 0 011.05-.607l10.89 6.288a.7.7 0 010 1.212L4.05 14.894A.7.7 0 013 14.288V1.713z">
+                            </path>
+                        </svg>
+                    </button>
+                    <button type="submit">
+                        <svg role="img" height="24" width="24" viewBox="0 0 24 24" class="Svg-sc-1bi12j5-0 jgfuCe">
+                            <path
+                                d="M5.21 1.57a6.757 6.757 0 016.708 1.545.124.124 0 00.165 0 6.741 6.741 0 015.715-1.78l.004.001a6.802 6.802 0 015.571 5.376v.003a6.689 6.689 0 01-1.49 5.655l-7.954 9.48a2.518 2.518 0 01-3.857 0L2.12 12.37A6.683 6.683 0 01.627 6.714 6.757 6.757 0 015.21 1.57zm3.12 1.803a4.757 4.757 0 00-5.74 3.725l-.001.002a4.684 4.684 0 001.049 3.969l.009.01 7.958 9.485a.518.518 0 00.79 0l7.968-9.495a4.688 4.688 0 001.049-3.965 4.803 4.803 0 00-3.931-3.794 4.74 4.74 0 00-4.023 1.256l-.008.008a2.123 2.123 0 01-2.9 0l-.007-.007a4.757 4.757 0 00-2.214-1.194z">
+                            </path>
+                        </svg>
+                    </button>
+                    <button type="submit">
+                        <svg role="img" height="24" width="24" viewBox="0 0 24 24" class="Svg-sc-1bi12j5-0 jgfuCe">
+                            <path
+                                d="M4.5 13.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3zm15 0a1.5 1.5 0 100-3 1.5 1.5 0 000 3zm-7.5 0a1.5 1.5 0 100-3 1.5 1.5 0 000 3z">
+                            </path>
+                        </svg>
+                    </button>
+                </div>
 
-    </div>
-    <div class="player"></div>
+            </div>
+
+        </div>
+
+        <div class="discography">
+
+        </div>
+        <div class="player"></div>
 </body>
 
 <script src="scripts.js"></script>
