--- a/spotifyAdvancedHTML.html
+++ b/spotifyAdvancedHTML.html
@@ -6,6 +6,8 @@
     <link rel="StyleSheet" href="./spotifyAdvancedCSShtml.css" type="text/css" />
     <link rel="StyleSheet" href="./spotifyAdvancedCSS-Headerhtml.css" type="text/css" />
     <link rel="StyleSheet" href="./spotifyAdvancedCSS-albumInfo.css" type="text/css" />
+    <link rel="StyleSheet" href="./spotifyAdvancedCSS-Discography.css" type="text/css" />
+
     <link rel="preload" href="https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Book.3466e0ec.woff2" as="font"
         type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="https://open.scdn.co/cdn/fonts/CircularSpUIv3T-Bold.8d0a45cc.woff2" as="font"
@@ -75,10 +77,27 @@
                 </div>
 
             </div>
-
         </div>
 
         <div class="discography">
+            <div class="songsInfoHeader">
+                <div>#</div>
+                <div>TÍTULO</div>
+                <div>
+                    <svg role="img" height="16" width="16" viewBox="0 0 16 16" class="Svg-sc-1bi12j5-0 jgfuCe">
+                        <path d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8z"></path>
+                        <path d="M8 3.25a.75.75 0 01.75.75v3.25H11a.75.75 0 010 1.5H7.25V4A.75.75 0 018 3.25z"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class="songsContainer">
+                <div class="songNumber">1</div>
+                <div class="songName">
+                    <span>Strangers By Nature</span>
+                    <span>Adele</span>
+                </div> 
+                <div class="songDuration">3:02</div>
+            </div>
 
         </div>
         <div class="player"></div>
