--- a/testingAdele.html
+++ b/testingAdele.html
@@ -200,6 +200,7 @@
         function playFirstSong() {
 
             const albumId = this.id
+            console.log(this)
             const container = document.querySelectorAll(`.firstContainer`)
             let firstSongSelector;
 
